Java editor LS Quick Assist